--- a/gardener-1.0.0/contact.html
+++ b/gardener-1.0.0/contact.html
@@ -133,14 +133,14 @@
 
 
    <!-- Contact Start -->
-<div class="container-xxl py-5">
+   <div class="container-xxl py-5">
     <div class="container">
         <div class="row g-5">
-            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+            <div class="col-lg-6">
                 <p class="fs-5 fw-bold text-primary">Contact Us</p>
                 <h1 class="display-5 mb-5">Get in Touch with Us</h1>
-                <p class="mb-4">If you have any questions about our food donation schedule, partnership opportunities, or any other inquiries, feel free to reach out to us. We're here to help and make sure you get the support you need. </p>
-                <form>
+                <p class="mb-4">If you have any questions about our food donation schedule, partnership opportunities, or any other inquiries, feel free to reach out to us. We're here to help and make sure you get the support you need.</p>
+                <form id="contactForm">
                     <div class="row g-3">
                         <div class="col-md-6">
                             <div class="form-floating">
@@ -172,7 +172,7 @@
                     </div>
                 </form>
             </div>
-            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 450px;">
+            <div class="col-lg-6" style="min-height: 450px;">
                 <div class="position-relative rounded overflow-hidden h-100">
                     <iframe class="position-relative w-100 h-100"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125425.54525686826!2d35.75827495679278!3d32.53979873887413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151b83c90d7c1e9d%3A0xd5a2e64d3e5d4c3d!2sIrbid%2C%20Jordan!5e0!3m2!1sen!2sbd!4v1694612567123!5m2!1sen!2sbd"
@@ -183,11 +183,12 @@
         </div>
     </div>
 </div>
+
 <!-- Contact End -->
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div id="messageBox" class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -252,7 +253,63 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
+    <script>
+      async function submitContactForm() {
+    const name = document.getElementById('name').value;
+    const email = document.getElementById('email').value;
+    const subject = document.getElementById('subject').value;
+    const message = document.getElementById('message').value;
 
+    // Construct the contact data object
+    const contactData = {
+        Name: name,
+        Email: email,
+        Subject: subject,
+        Message: message
+    };
+
+    try {
+        const response = await fetch('https://localhost:44395/api/Home/PostContactUs', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(contactData)
+        });
+
+        // Parse response
+        const result = await response.json();
+        if (response.ok) {
+            // Handle success: Display a success message or clear the form
+            document.getElementById('messageBox').innerHTML = `
+                <div class="alert alert-success">
+                    Your message has been sent successfully!
+                </div>`;
+            document.querySelector('form').reset();
+        } else {
+            // Handle failure: Display an error message
+            document.getElementById('messageBox').innerHTML = `
+                <div class="alert alert-danger">
+                    ${result.message || 'Failed to send your message.'}
+                </div>`;
+        }
+    } catch (error) {
+        console.error('Error:', error);
+        // Handle any unexpected errors
+        document.getElementById('messageBox').innerHTML = `
+            <div class="alert alert-danger">
+                There was an error sending your message. Please try again.
+            </div>`;
+    }
+}
+
+// Event listener for the submit button
+document.querySelector('form').addEventListener('submit', function (e) {
+    e.preventDefault(); // Prevent form submission from reloading the page
+    submitContactForm(); // Call the async function to handle form submission
+});
+
+    </script>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
