--- a/gardener-1.0.0/login.html
+++ b/gardener-1.0.0/login.html
@@ -76,7 +76,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav ms-auto p-4 p-lg-0">
+        <div class="navbar-nav ms-auto p-4 p-lg-0" id="navbar-links">            ">
             <a href="index.html" class="nav-item nav-link active">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
             <a href="service.html" class="nav-item nav-link">Services</a>
@@ -133,13 +133,13 @@
 
 
    <!-- Login Start -->
-<div class="login-block py-5">
+   <div class="login-block py-5">
     <div class="container">
         <div class="row align-items-center">
             <!-- Login Section -->
             <div class="col-md-6 border-end">
                 <h4 class="mb-4">Login</h4>
-                <form>
+                <form id="loginForm">
                     <!-- Username/Email -->
                     <div class="mb-3">
                         <label for="username" class="form-label">Username or Email Address *</label>
@@ -244,6 +244,91 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+    // Check if the user is already logged in
+    if (sessionStorage.getItem('isLoggedIn') === 'true') {
+        showLoggedInNavbar();
+    } else {
+        showLoggedOutNavbar();
+    }
+
+    // Handle login form submission
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
+        e.preventDefault(); // Prevent form from submitting
+
+        // Capture user input (you should validate this with a backend in real implementation)
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+
+        // Dummy login check (replace with real validation)
+        if (username && password) {
+            // Set sessionStorage for the login status
+            sessionStorage.setItem('isLoggedIn', 'true');
+            sessionStorage.setItem('username', username); // You can save user info if needed
+
+            // Update the navbar
+            showLoggedInNavbar();
+
+            // Redirect to home or wherever after login
+            window.location.href = 'index.html';
+        } else {
+            alert('Please enter valid login credentials.');
+        }
+    });
+
+    // Example logout function
+    function logoutUser() {
+        // Remove login status
+        sessionStorage.removeItem('isLoggedIn');
+        sessionStorage.removeItem('username');
+
+        // Update the navbar
+        showLoggedOutNavbar();
+
+        // Redirect to home or login page after logout
+        window.location.href = 'index.html';
+    }
+
+    // Function to display navbar for logged in users
+    function showLoggedInNavbar() {
+        document.getElementById('navbar-links').innerHTML = `
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="myaccount.html" class="nav-item nav-link">Profile</a>
+            <a href="cart.html" class="nav-item nav-link">Cart</a>
+            <a href="javascript:void(0);" class="nav-item nav-link" onclick="logoutUser()">Logout</a>
+            <a href="donate.html" class="nav-item nav-link" style="color:#FFC107; font-weight: bold;">Donate</a>
+        `;
+    }
+
+    // Function to display navbar for logged out users
+    function showLoggedOutNavbar() {
+        document.getElementById('navbar-links').innerHTML = `
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="about.html" class="nav-item nav-link">About</a>
+            <a href="service.html" class="nav-item nav-link">Services</a>
+                        <a href="storelist.html" class="nav-item nav-link active">Deals</a>
+
+            <a href="contact.html" class="nav-item nav-link">Contact</a>
+            <a href="donate.html" class="nav-item nav-link" style="color:#FFC107; font-weight: bold;">Donate</a>
+            <a href="javascript:void(0);" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block" id="joinUsBtn">Join us
+                <i class="fa fa-arrow-right ms-3"></i>
+            </a>
+            <div id="joinUsPopup" class="login-popup" style="display: none;">
+                <a href="login.html" class="button-main w-full text-center">Login</a>
+                <div class="text-secondary text-center mt-2 pb-3" style="font-size: large;">
+                    Don’t have an account?
+                    <a href="register.html" class="text-black pl-1 hover:underline">Register</a>
+                </div>
+                <div class="bottom pt-3 border-t border-line"></div>
+                <a href="#!" class="body1 hover:underline">Support</a>
+            </div>
+        `;
+    }
+});
+
+</script>
+<script src="path/to/auth.js"></script>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
