--- a/gardener-1.0.0/register.html
+++ b/gardener-1.0.0/register.html
@@ -144,88 +144,91 @@
 
             <!-- Register as User Form -->
             <!-- Register as User Form -->
-<div id="registerUserForm" class="col-md-6 border-end">
-    <h4 class="mb-4">Register as User</h4>
-    <form onsubmit="registerUser(event)">
-        <!-- Username/Email -->
-        <div class="mb-3">
-            <label for="username" class="form-label">Username or Email Address *</label>
-            <input type="email" class="form-control" id="username" placeholder="Enter your email" value="ss@user.com" required>
-        </div>
-        <!-- Password -->
-        <div class="mb-3">
-            <label for="password" class="form-label">Password *</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
-        </div>
-        <!-- Confirm Password -->
-        <div class="mb-3">
-            <label for="confirmPassword" class="form-label">Confirm Password *</label>
-            <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" required>
-        </div>
-        <!-- Terms and Conditions -->
-        <div class="d-flex align-items-center mb-3">
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="remember" required>
-                <label class="form-check-label" for="remember">I agree to the <a href="#!" class="text-decoration-none">Terms of Use</a></label>
+            <div id="registerUserForm" class="col-md-6 border-end">
+                <h4 class="mb-4">Register as User</h4>
+                <form onsubmit="registerUser(event)">
+                    <!-- Username/Email -->
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Username or Email Address *</label>
+                        <input type="email" class="form-control" id="username" placeholder="Enter your email" value="ss@user.com" required>
+                    </div>
+                    <!-- Password -->
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password *</label>
+                        <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                    </div>
+                    <!-- Confirm Password -->
+                    <div class="mb-3">
+                        <label for="confirmPassword" class="form-label">Confirm Password *</label>
+                        <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" required>
+                    </div>
+                    <!-- Terms and Conditions -->
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="remember" required>
+                            <label class="form-check-label" for="remember">I agree to the <a href="#!" class="text-decoration-none">Terms of Use</a></label>
+                        </div>
+                    </div>
+                    <!-- Register Button -->
+                    <div class="mb-3">
+                        <button type="submit" class="btn btn-primary w-100">Register as User</button>
+                    </div>
+                </form>
             </div>
-        </div>
-        <!-- Register Button -->
-        <div class="mb-3">
-            <button type="submit" class="btn btn-primary w-100">Register as User</button>
-        </div>
-    </form>
-</div>
+
 <!--=================================================-->
 <!--=================================================-->
 <!--=================================================-->
 
             <!-- Register as Restaurant Form -->
-            <div id="registerRestaurantForm" class="col-md-6 border-end" style="display: none;">
-                <h4 class="mb-4">Register as Restaurant</h4>
-                <form onsubmit="registerRestaurant(event)">
-                    <!-- Restaurant Name -->
-                    <div class="mb-3">
-                        <label for="restaurantName" class="form-label">Restaurant Name *</label>
-                        <input type="text" class="form-control" id="restaurantName" placeholder="Enter restaurant name" required>
+           <!-- Register as Restaurant Form -->
+           <div id="registerRestaurantForm" class="col-md-6 border-end" style="display: none;">
+            <h4 class="mb-4">Register as Restaurant</h4>
+            <form onsubmit="registerRestaurant(event)">
+                <!-- Restaurant Name -->
+                <div class="mb-3">
+                    <label for="restaurantName" class="form-label">Restaurant Name *</label>
+                    <input type="text" class="form-control" id="restaurantName" placeholder="Enter restaurant name" required>
+                </div>
+                <!-- Email -->
+                <div class="mb-3">
+                    <label for="emailRestaurant" class="form-label">Email Address *</label>
+                    <input type="email" class="form-control" id="emailRestaurant" placeholder="Enter your email" required>
+                </div>
+                <!-- Password -->
+                <div class="mb-3">
+                    <label for="passwordRestaurant" class="form-label">Password *</label>
+                    <input type="password" class="form-control" id="passwordRestaurant" placeholder="Enter your password" required>
+                </div>
+                <!-- Contact Person Name -->
+                <div class="mb-3">
+                    <label for="contactPerson" class="form-label">Contact Person Name *</label>
+                    <input type="text" class="form-control" id="contactPerson" placeholder="Enter contact person name" required>
+                </div>
+                <!-- Contact Phone Number -->
+                <div class="mb-3">
+                    <label for="contactPhone" class="form-label">Contact Phone Number *</label>
+                    <input type="tel" class="form-control" id="contactPhone" placeholder="Enter contact phone number" required>
+                </div>
+                <!-- Restaurant Address -->
+                <div class="mb-3">
+                    <label for="restaurantAddress" class="form-label">Restaurant Address *</label>
+                    <input type="text" class="form-control" id="restaurantAddress" placeholder="Enter restaurant address" required>
+                </div>
+                <!-- Terms and Conditions -->
+                <div class="d-flex align-items-center mb-3">
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="termsRestaurant" required>
+                        <label class="form-check-label" for="termsRestaurant">I agree to the <a href="#!" class="text-decoration-none">Terms of Use</a></label>
                     </div>
-                    <!-- Email -->
-                    <div class="mb-3">
-                        <label for="emailRestaurant" class="form-label">Email Address *</label>
-                        <input type="email" class="form-control" id="emailRestaurant" placeholder="Enter your email" required>
-                    </div>
-                    <!-- Password -->
-                    <div class="mb-3">
-                        <label for="passwordRestaurant" class="form-label">Password *</label>
-                        <input type="password" class="form-control" id="passwordRestaurant" placeholder="Enter your password" required>
-                    </div>
-                    <!-- Contact Person Name -->
-                    <div class="mb-3">
-                        <label for="contactPerson" class="form-label">Contact Person Name *</label>
-                        <input type="text" class="form-control" id="contactPerson" placeholder="Enter contact person name" required>
-                    </div>
-                    <!-- Contact Phone Number -->
-                    <div class="mb-3">
-                        <label for="contactPhone" class="form-label">Contact Phone Number *</label>
-                        <input type="tel" class="form-control" id="contactPhone" placeholder="Enter contact phone number" required>
-                    </div>
-                    <!-- Restaurant Address -->
-                    <div class="mb-3">
-                        <label for="restaurantAddress" class="form-label">Restaurant Address *</label>
-                        <input type="text" class="form-control" id="restaurantAddress" placeholder="Enter restaurant address" required>
-                    </div>
-                    <!-- Terms and Conditions -->
-                    <div class="d-flex align-items-center mb-3">
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="termsRestaurant" required>
-                            <label class="form-check-label" for="termsRestaurant">I agree to the <a href="#!" class="text-decoration-none">Terms of Use</a></label>
-                        </div>
-                    </div>
-                    <!-- Register Button -->
-                    <div class="mb-3">
-                        <button type="submit" class="btn btn-primary w-100">Register as Restaurant</button>
-                    </div>
-                </form>
-            </div>
+                </div>
+                <!-- Register Button -->
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary w-100">Register as Restaurant</button>
+                </div>
+            </form>
+        </div>
+        
 
             <!-- Already Have an Account Section -->
             <div class="col-md-6 text-center">
@@ -494,28 +497,25 @@ function registerUser(event) {
             return;
         }
 
-        const restaurantData = {
-            Name: restaurantName,
-            Email: email,
-            Password: password,
-            OwnerName: contactPerson,
-            PhoneNo: contactPhone,
-            Address: address
-        };
+        // Create a FormData object instead of JSON
+        const formData = new FormData();
+        formData.append('Name', restaurantName);
+        formData.append('Email', email);
+        formData.append('Password', password);
+        formData.append('OwnerName', contactPerson);
+        formData.append('PhoneNo', contactPhone);
+        formData.append('Address', address);
 
-        console.log("Sending data to API:", restaurantData);
+        console.log("Sending data to API using FormData");
 
-        fetch('https://localhost:44395/api/Users/api/RestReg', {
+        fetch('https://localhost:44395/api/Users/RestReg', {
             method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(restaurantData)
+            body: formData
         })
         .then(response => {
-            console.log("API response status:", response.status);  // Log API response status
+            console.log("API response:", response);  // Log API response status
             if (response.ok) {
-                alert('Registration successful');
+                alert('Restaurant registration successful');
                 window.location.href = 'login.html';  // Redirect to login page after successful registration
             } else {
                 response.json().then(data => {
@@ -532,7 +532,7 @@ function registerUser(event) {
 
 
 
-    
+
 
 <!---->
     <!-- JavaScript Libraries -->
@@ -549,6 +549,62 @@ function registerUser(event) {
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <script src="path/to/auth.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+    // Check if the user is already logged in
+    if (sessionStorage.getItem('isLoggedIn') === 'true') {
+        showLoggedInNavbar();
+    } else {
+        showLoggedOutNavbar();
+    }
+
+    function showLoggedInNavbar() {
+        document.getElementById('navbar-links').innerHTML = `
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+        <a href="myaccount.html" class="nav-item nav-link">Profile</a>
+            <a href="cart.html" class="nav-item nav-link">Cart</a>
+            <a href="javascript:void(0);" class="nav-item nav-link" onclick="logoutUser()">Logout</a>
+            <a href="donate.html" class="nav-item nav-link" style="color:#FFC107; font-weight: bold;">Donate</a>
+        `;
+    }
+
+    function showLoggedOutNavbar() {
+        document.getElementById('navbar-links').innerHTML = `
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="about.html" class="nav-item nav-link">About</a>
+            <a href="service.html" class="nav-item nav-link">Services</a>
+                        <a href="storelist.html" class="nav-item nav-link active">Deals</a>
+
+            <a href="contact.html" class="nav-item nav-link">Contact</a>
+            <a href="donate.html" class="nav-item nav-link" style="color:#FFC107; font-weight: bold;">Donate</a>
+            <a href="javascript:void(0);" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block" id="joinUsBtn">Join us
+                <i class="fa fa-arrow-right ms-3"></i>
+            </a>
+            <div id="joinUsPopup" class="login-popup" style="display: none;">
+                <a href="login.html" class="button-main w-full text-center">Login</a>
+                <div class="text-secondary text-center mt-2 pb-3" style="font-size: large;">
+                    Don’t have an account?
+                    <a href="register.html" class="text-black pl-1 hover:underline">Register</a>
+                </div>
+                <div class="bottom pt-3 border-t border-line"></div>
+                <a href="#!" class="body1 hover:underline">Support</a>
+            </div>
+        `;
+    }
+
+    window.logoutUser = function () {
+        // Remove login status
+        sessionStorage.removeItem('isLoggedIn');
+        sessionStorage.removeItem('username');
+        showLoggedOutNavbar(); // Update the navbar
+        window.location.href = 'index.html'; // Redirect to home or login page after logout
+    }
+});
+
+    </script>
 </body>
 
 </html>
