--- a/Master Piece Content/admin/html.phoenixcoded.net/light-able/bootstrap/application/account-profile.html
+++ b/Master Piece Content/admin/html.phoenixcoded.net/light-able/bootstrap/application/account-profile.html
@@ -788,10 +788,13 @@
                   <div class="tab-pane fade show active" id="user-set-profile" role="tabpanel" aria-labelledby="user-set-profile-tab">
                     <div class="card">
                       <div class="card-header">
+                        <h5>Bio</h5>
                       </div>
+                      <div class="card-body">
                         <p class="mb-0" id="bio"></p>
                       </div>
                     </div>
+                   
                     <div class="card">
                       <div class="card-header">
                         <h5>Personal Details</h5>
