--- a/Master Piece Content/admin/html.phoenixcoded.net/light-able/bootstrap/application/Services.html
+++ b/Master Piece Content/admin/html.phoenixcoded.net/light-able/bootstrap/application/Services.html
@@ -715,13 +715,13 @@
           <div class="col-md-12">
             <ul class="breadcrumb">
               <li class="breadcrumb-item"><a href="https://html.phoenixcoded.net/light-able/bootstrap/dashboard/index.html">Home</a></li>
-              <li class="breadcrumb-item"><a href="javascript: void(0)">Invoice</a></li>
-              <li class="breadcrumb-item" aria-current="page">List</li>
+              <li class="breadcrumb-item"><a href="javascript: void(0)">Super Admin</a></li>
+              <li class="breadcrumb-item" aria-current="page">Services</li>
             </ul>
           </div>
           <div class="col-md-12">
             <div class="page-header-title">
-              <h2 class="mb-0">List</h2>
+              <h2 class="mb-0"></h2>
             </div>
           </div>
         </div>
@@ -1268,32 +1268,28 @@
    document.addEventListener('DOMContentLoaded', async function () {
     // Fetch and populate Partnership Requests
     async function fetchPartnershipRequests() {
-        try {
-            const response = await fetch('https://localhost:44395/api/ServicesRequestsForms/GetAllPartReq');
-            const data = await response.json();
-            const tableBody = document.getElementById('partnershipRequests');
-            tableBody.innerHTML = '';
+        const response = await fetch('https://localhost:44395/api/ServicesRequestsForms/GetAllPartReq');
+        const data = await response.json();
+        const tableBody = document.getElementById('partnershipRequests');
+        tableBody.innerHTML = '';
 
-            data.forEach(request => {
-                const row = `
-                    <tr>
-                        <td>${request.requestID}</td>
-                        <td>${request.organizationType}</td>
-                        <td>${request.contactPerson}</td>
-                        <td>${request.email}</td>
-                        <td>${request.partnershipGoals}</td>
-                        <td>
-                            <button class="btn btn-success btn-sm" onclick="handleAccept(${request.requestID}, 'partnership')">Accept</button>
-                            <button class="btn btn-danger btn-sm" onclick="handleReject1(${request.requestID}, 'partnership')">Reject</button>
-                        </td>
-                    </tr>
-                `;
-                tableBody.innerHTML += row;
-            });
-        } catch (error) {
-            console.error('Error fetching partnership requests:', error);
-        }
+        data.forEach(request => {
+            const row = `
+                <tr>
+                    <td>${request.requestId}</td>
+                    <td>${request.organizationType}</td>
+                    <td>${request.contactPerson}</td>
+                    <td>${request.email}</td>
+                    <td>${request.partnershipGoals}</td>
+                    <td>
+                        <button class="btn btn-danger btn-sm" onclick="handleReject1(${request.requestId}, 'partnership')">Reject</button>
+                    </td>
+                </tr>
+            `;
+            tableBody.innerHTML += row;
+        });
     }
+
 
     // Fetch and populate Food Collection Requests
     async function fetchFoodCollectionRequests() {
@@ -1306,7 +1302,7 @@
             data.forEach(request => {
                 const row = `
                     <tr>
-                        <td>${request.requestID}</td>
+                        <td>${request.requestId}</td>
                         <td>${request.name}</td>
                         <td>${request.email}</td>
                         <td>${request.phone}</td>
@@ -1315,8 +1311,7 @@
                         <td>${new Date(request.preferredPickupDate).toLocaleDateString()}</td>
                         <td>${request.preferredPickupTime}</td>
                         <td>
-                            <button class="btn btn-success btn-sm" onclick="handleAccept(${request.requestID}, 'collection')">Accept</button>
-                            <button class="btn btn-danger btn-sm" onclick="handleReject(${request.requestID}, 'collection')">Reject</button>
+                            <button class="btn btn-danger btn-sm" onclick="handleReject2(${request.requestId}, 'collection')">Reject</button>
                         </td>
                     </tr>
                 `;
@@ -1338,7 +1333,7 @@
             data.forEach(request => {
                 const row = `
                     <tr>
-                        <td>${request.requestID}</td>
+                        <td>${request.requestId}</td>
                         <td>${request.charityName}</td>
                         <td>${request.contactPerson}</td>
                         <td>${request.email}</td>
@@ -1348,8 +1343,7 @@
                         <td>${request.quantityNeeded}</td>
                         <td>${new Date(request.preferredDeliveryDate).toLocaleDateString()}</td>
                         <td>
-                            <button class="btn btn-success btn-sm" onclick="handleAccept(${request.requestID}, 'distribution')">Accept</button>
-                            <button class="btn btn-danger btn-sm" onclick="handleReject(${request.requestID}, 'distribution')">Reject</button>
+                            <button class="btn btn-danger btn-sm" onclick="handleReject3(${request.requestId}, 'distribution')">Reject</button>
                         </td>
                     </tr>
                 `;
@@ -1366,40 +1360,59 @@
     fetchFoodDistributionRequests();
 });
 
-// Functions to handle Accept and Reject actions
-function handleAccept(requestID, type) {
-    const endpoint = getEndpoint(type, 'accept');
-    if (confirm('Are you sure you want to accept this request?')) {
-        fetch(endpoint + requestID, { method: 'POST' })
+//reject1
+function handleReject1(requestId, type) {
+  debugger
+    const endpoint = getEndpoint(type, 'reject');
+    if (confirm('Are you sure you want to reject this request?')) {
+        fetch(`${endpoint}${requestId}`, { method: 'POST' })
             .then(response => {
+                // Simplified handling based on response
                 if (response.ok) {
-                    alert('Request accepted successfully');
+                    alert('Request rejected successfully');
                     location.reload(); // Reload the page to see the changes
                 } else {
-                    alert('Failed to accept the request');
+                    alert('Failed to reject the request');
                 }
             });
     }
 }
 
-function handleReject1(requestID, type) {
-        const endpoint = getEndpoint(type, 'reject'); // Define your endpoint logic
-        if (confirm('Are you sure you want to reject this request?')) {
-            fetch(`${endpoint}${requestID}`, { method: 'POST' })
-                .then(response => {
-                    if (response.ok) {
-                        alert('Request rejected successfully');
-                        location.reload(); // Reload the page to see the changes
-                    } else {
-                        alert('Failed to reject the request');
-                    }
-                })
-                .catch(error => {
-                    console.error('Error rejecting request:', error);
-                });
-        }
+//reject2
+function handleReject2(requestId, type) {
+  debugger
+    const endpoint = getEndpoint(type, 'reject');
+    if (confirm('Are you sure you want to reject this request?')) {
+        fetch(`${endpoint}${requestId}`, { method: 'POST' })
+            .then(response => {
+                // Simplified handling based on response
+                if (response.ok) {
+                    alert('Request rejected successfully');
+                    location.reload(); // Reload the page to see the changes
+                } else {
+                    alert('Failed to reject the request');
+                }
+            });
     }
-
+}
+//reject3
+function handleReject3(requestId, type) {
+  debugger
+    const endpoint = getEndpoint(type, 'reject');
+    if (confirm('Are you sure you want to reject this request?')) {
+        fetch(`${endpoint}${requestId}`, { method: 'POST' })
+            .then(response => {
+                // Simplified handling based on response
+                if (response.ok) {
+                    alert('Request rejected successfully');
+                    location.reload(); // Reload the page to see the changes
+                } else {
+                    alert('Failed to reject the request');
+                }
+            });
+    }
+}
+//===========================
 function getEndpoint(type, action) {
     switch (type) {
         case 'partnership':
@@ -1416,7 +1429,25 @@ function getEndpoint(type, action) {
 </script>
 
 
+<!-- <button class="btn btn-success btn-sm" onclick="handleAccept(${request.requestID}, 'partnership')">Accept</button> -->
+<!-- // Functions to handle Accept and Reject actions
+// function handleAccept(requestID, type) {
+//     const endpoint = getEndpoint(type, 'accept');
+//     if (confirm('Are you sure you want to accept this request?')) {
+//         fetch(endpoint + requestID, { method: 'POST' })
+//             .then(response => {
+//                 if (response.ok) {
+//                     alert('Request accepted successfully');
+//                     location.reload(); // Reload the page to see the changes
+//                 } else {
+//                     alert('Failed to accept the request');
+//                 }
+//             });
+//     }
+// } -->
+<!-- <button class="btn btn-success btn-sm" onclick="handleAccept(${request.requestID}, 'distribution')">Accept</button>
 
+<button class="btn btn-success btn-sm" onclick="handleAccept(${request.requestID}, 'collection')">Accept</button> -->
 
 <!-- Mirrored from html.phoenixcoded.net/light-able/bootstrap/application/ecom_product-list.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Sep 2024 09:57:42 GMT -->
 </html>
